package com.Builder;

public interface Builder {
    void AddTitle();
    void AddIntroduction();
    void AddMainPart();
    void AddConclusion();
}
