package com.Builder;

public class Chart extends DocumentElement {
    @Override
    public String toString() {
        return "Chart: " + Content;
    }
}
