package com.Builder;

public class Diagram extends DocumentElement {
    @Override
    public String toString() {
        return "Diagram: " + Content;
    }
}
