package com.Builder;

public abstract class DocumentElement {
    public String Content;
}
