package com.Builder;

public class Image extends DocumentElement {
    @Override
    public String toString() {
        return "Image: " + Content;
    }
}
