package com.Builder;

public class Text extends DocumentElement {
    @Override
    public String toString() {
        return "Text: " + Content;
    }
}
