@startuml
package "DocumentBuilder" {
    skinparam class {
        BackgroundColor White
        ArrowColor Black
        BorderColor Black
        linetype polyline
    }
    skinparam linetype ortho

    class Director {
        -builder: Builder

        +Construct(): void
    }

    interface Builder {
        +AddTitle(): void
        +AddIntroduction(): void
        +AddMainPart(): void
        +AddConclusion(): void
    }

    abstract class DocumentElement {
        -Content: string
    }

    class Document {
        +Elements: DocumentElement[]

        +Add(DocumentElement): void
    }

    class Text {
    }

    class Diagram {
    }

    class Chart {
    }

    class Image {
    }

    class ReportBuilder {
        -document: Document

        +GetResult(): Document
    }

    class ThesisBuilder {
        -document: Document

        +GetResult(): Document
    }

    Director o--> Builder
    Builder <|.down. ThesisBuilder
    Builder <|.down. ReportBuilder
    ReportBuilder --> Document
    ThesisBuilder --> Document
    Document "1" *--> "*" Text
    ' bugfix: Document "1" *--> "*" Diagram
    Document "*" *--> "1" Diagram
    ' bugfix: Document "1" *--> "*" Chart
    Document "*" *--> "1" Chart
    Document "1" *--> "*" Image
    Text --|> DocumentElement
    Diagram --|> DocumentElement
    Chart --|> DocumentElement
    Image --|> DocumentElement
}

@enduml